--- a/Demo20190213.ipynb
+++ b/Demo20190213.ipynb
@@ -977,6 +977,388 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 安裝 Keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: keras in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: six>=1.9.0 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from keras)\n",
+      "Requirement already satisfied: pyyaml in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from keras)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from keras)\n",
+      "Requirement already satisfied: scipy>=0.14 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from keras)\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 19.0.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 引用Keras 套件"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.datasets import mnist\n",
+    "from keras.models import Sequential\n",
+    "from keras.optimizers import SGD\n",
+    "from keras.layers import Activation, Dense"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 讀取 MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000,)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 28, 28)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = x_train.reshape(60000, 784)\n",
+    "x_test = x_test.reshape(10000, 784)\n",
+    "x_train = x_train.astype('float32')\n",
+    "x_test  = x_test.astype('float32')\n",
+    "x_train /= 255\n",
+    "x_test  /= 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 784)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 784)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "n_classes  = 10 \n",
+    "y_train = keras.utils.to_categorical(y_train, n_classes)\n",
+    "y_test  = keras.utils.to_categorical(y_test, n_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 設定網路參數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hidden_1 = 256 \n",
+    "n_hidden_2 = 256 \n",
+    "n_input    = 784 \n",
+    "n_classes  = 10 \n",
+    "\n",
+    "training_epochs = 15\n",
+    "batch_size = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 訓練神經網路"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.Sequential()\n",
+    "model.add(Dense(n_hidden_1, activation='relu', input_shape=(n_input,)))\n",
+    "model.add(Dense(n_hidden_2, activation='relu'))\n",
+    "model.add(Dense(n_classes, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2885: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1349: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=SGD(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 訓練神經網路"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/15\n",
+      "60000/60000 [==============================] - 2s 34us/step - loss: 1.0084 - acc: 0.7657 - val_loss: 0.4700 - val_acc: 0.8816\n",
+      "Epoch 2/15\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.4139 - acc: 0.8887 - val_loss: 0.3491 - val_acc: 0.9023\n",
+      "Epoch 3/15\n",
+      "60000/60000 [==============================] - 2s 35us/step - loss: 0.3387 - acc: 0.9049 - val_loss: 0.3044 - val_acc: 0.9151\n",
+      "Epoch 4/15\n",
+      "60000/60000 [==============================] - 2s 32us/step - loss: 0.3015 - acc: 0.9151 - val_loss: 0.2758 - val_acc: 0.9249\n",
+      "Epoch 5/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2758 - acc: 0.9219 - val_loss: 0.2557 - val_acc: 0.9284\n",
+      "Epoch 6/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2558 - acc: 0.9279 - val_loss: 0.2404 - val_acc: 0.9333\n",
+      "Epoch 7/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2388 - acc: 0.9325 - val_loss: 0.2276 - val_acc: 0.9357\n",
+      "Epoch 8/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2242 - acc: 0.9362 - val_loss: 0.2164 - val_acc: 0.9379\n",
+      "Epoch 9/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2113 - acc: 0.9398 - val_loss: 0.2072 - val_acc: 0.9401\n",
+      "Epoch 10/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.2002 - acc: 0.9427 - val_loss: 0.1949 - val_acc: 0.9450\n",
+      "Epoch 11/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.1902 - acc: 0.9454 - val_loss: 0.1882 - val_acc: 0.9453\n",
+      "Epoch 12/15\n",
+      "60000/60000 [==============================] - 2s 32us/step - loss: 0.1813 - acc: 0.9485 - val_loss: 0.1787 - val_acc: 0.9499\n",
+      "Epoch 13/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.1730 - acc: 0.9503 - val_loss: 0.1723 - val_acc: 0.9506\n",
+      "Epoch 14/15\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.1657 - acc: 0.9525 - val_loss: 0.1681 - val_acc: 0.9529\n",
+      "Epoch 15/15\n",
+      "60000/60000 [==============================] - 2s 34us/step - loss: 0.1588 - acc: 0.9541 - val_loss: 0.1599 - val_acc: 0.9539\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(x_train, y_train,\n",
+    "                    batch_size=batch_size,\n",
+    "                    epochs=training_epochs,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(x_test, y_test))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
